--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
 	"name"				: "transposer"
 ,	"description"		: "Variable transposition from dataKeys"
-,	"version"			: "0.3.1"
+,	"version"			: "0.3.2"
 ,	"author"			: { "name": "nfour" }
-
+,	"repository"		: {
+		"type": "git",
+		"url": "https://github.com/nfour/transposer"
+	}
+	
 ,	"dependencies": {
 		"lutils" : "0.2.x"
 	}
