--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
 	"name"				: "transposer"
 ,	"description"		: "Variable transposition from dataKeys"
-,	"version"			: "0.3.2"
+,	"version"			: "0.3.3"
 ,	"author"			: { "name": "nfour" }
 ,	"repository"		: {
 		"type": "git",
 		"url": "https://github.com/nfour/transposer"
 	}
-	
+
 ,	"dependencies": {
-		"lutils" : "0.2.x"
+		"lutils-typeof" : "~0.1.0"
 	}
 ,	"devDependencies": {
 		"nodeunit": "^0.9.0"
 	}
-	
+
 ,	"scripts": {
 		"build"		: "cake build"
 	,	"test"		: "npm run build && nodeunit ./test"
