--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
 	}
 ,	"devDependencies": {
 		"nodeunit": "^0.9.0"
+	,	"coffee-script": "~1.10.0"
 	}
 
 ,	"scripts": {
 		"build"		: "cake build"
-	,	"test"		: "npm run build && nodeunit ./test"
+	,	"test"		: "npm run build && nodeunit ./dist/test"
 	,	"publicate"	: "npm run build && npm publish"
 	}
 
-,	"main": "./Transposer"
+,	"main": "./dist/Transposer"
 }
